refactor: 매칭 정보 등록 기능 수정 기존 Dto 내부에 User 객체가 들어가있어 문제가 발생하였기에 해당 부분 수정하였습니다. 또한 리스트로 변환 시 `collect`를 사용하는 것이 아닌 `toList()`를 통해 바로 변환하도록 수정하였습니다.